<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="get_weather">Get Weather</string>
    <string name="input_city">Input city</string>
    <string name="date">Date: %1$s</string>
    <string name="temperature">Average temperature: %1$.0f\u2103</string>
    <string name="pressure">Pressure: %1$d</string>
    <string name="humidity">Humidity: %1$d%%</string>
    <string name="description">Description: %1$s</string>
    <string name="speak">Speak</string>
    <string name="speak_not_support">Speak Not Support</string>
    <string name="cannot_fetch_data">Cannot fetch data</string>
    <string name="error_root_detected">This app can\'t be used on this device</string>

</resources>