<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/_5hsdp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txtDate"
        tools:text="@string/date"
        android:layout_marginTop="@dimen/_8hsdp"
        android:textSize="?attr/nab.textViewTextSize"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txtTemperature"
        tools:text="@string/temperature"
        android:layout_marginTop="@dimen/_8hsdp"
        android:textSize="?attr/nab.textViewTextSize"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txtPressure"
        tools:text="@string/pressure"
        android:layout_marginTop="@dimen/_8hsdp"
        android:textSize="?attr/nab.textViewTextSize"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txtHumidity"
        tools:text="@string/humidity"
        android:layout_marginTop="@dimen/_8hsdp"
        android:textSize="?attr/nab.textViewTextSize"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txtDesciption"
        tools:text="@string/description"
        android:layout_marginTop="@dimen/_8hsdp"
        android:textSize="?attr/nab.textViewTextSize"
        android:layout_height="wrap_content"/>

</LinearLayout>